--- a/v/0.3.0/examples-poc/index.html
+++ b/v/0.3.0/examples-poc/index.html
@@ -1050,9 +1050,9 @@
 </ol>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
+<p><a href="../cors/">CORS</a> and authentication is not included in these examples for simplicity.
+Repeating calls are also not included as it would not make much sense to list the same discovery requests for each use case individually.</p>
 </div>
-<p>​    <a href="../cors/">CORS</a> and authentication is not included in these examples for simplicity.
-    Repeating calls are also not included as it would not make much sense to list the same discovery requests for each use case individually.</p>
 <h2 id="use-case-1">Use Case 1</h2>
 <p>Deriving minimum NDVI measurements over pixel time series of Sentinel 2 imagery.</p>
 <h3 id="1-requesting-the-capabilities-of-the-back-end">1. Requesting the capabilities of the back-end</h3>
