Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.1/examples-poc/index.html
+++ b/v/0.3.1/examples-poc/index.html
@@ -1315,9 +1315,9 @@ Repeating calls are also not included as it would not make much sense to list th
             <span class="nt">&quot;format&quot;</span><span class="p">:</span> <span class="s2">&quot;spatial_extent&quot;</span><span class="p">,</span>
             <span class="nt">&quot;required&quot;</span><span class="p">:</span> <span class="p">[</span>
               <span class="s2">&quot;west&quot;</span><span class="p">,</span>
+              <span class="s2">&quot;south&quot;</span><span class="p">,</span>
               <span class="s2">&quot;east&quot;</span><span class="p">,</span>
-              <span class="s2">&quot;north&quot;</span><span class="p">,</span>
-              <span class="s2">&quot;south&quot;</span>
+              <span class="s2">&quot;north&quot;</span>
             <span class="p">],</span>
             <span class="nt">&quot;properties&quot;</span><span class="p">:</span> <span class="p">{</span>
               <span class="nt">&quot;crs&quot;</span><span class="p">:</span> <span class="p">{</span>
@@ -1326,27 +1326,27 @@ Repeating calls are also not included as it would not make much sense to list th
                 <span class="nt">&quot;default&quot;</span><span class="p">:</span> <span class="s2">&quot;EPSG:4326&quot;</span>
               <span class="p">},</span>
               <span class="nt">&quot;west&quot;</span><span class="p">:</span> <span class="p">{</span>
-                <span class="nt">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;Lower left corner, coordinate axis 1 (west).&quot;</span><span class="p">,</span>
-                <span class="nt">&quot;type&quot;</span><span class="p">:</span> <span class="s2">&quot;number&quot;</span>
-              <span class="p">},</span>
-              <span class="nt">&quot;east&quot;</span><span class="p">:</span> <span class="p">{</span>
-                <span class="nt">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;Upper right corner, coordinate axis 1 (east).&quot;</span><span class="p">,</span>
-                <span class="nt">&quot;type&quot;</span><span class="p">:</span> <span class="s2">&quot;number&quot;</span>
-              <span class="p">},</span>
-              <span class="nt">&quot;north&quot;</span><span class="p">:</span> <span class="p">{</span>
-                <span class="nt">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;Lower left corner, coordinate axis 2 (north).&quot;</span><span class="p">,</span>
+                <span class="nt">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;West (lower left corner, coordinate axis 1).&quot;</span><span class="p">,</span>
                 <span class="nt">&quot;type&quot;</span><span class="p">:</span> <span class="s2">&quot;number&quot;</span>
               <span class="p">},</span>
               <span class="nt">&quot;south&quot;</span><span class="p">:</span> <span class="p">{</span>
-                <span class="nt">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;Upper right corner, coordinate axis 2 (south).&quot;</span><span class="p">,</span>
+                <span class="nt">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;South (lower left corner, coordinate axis 2).&quot;</span><span class="p">,</span>
+                <span class="nt">&quot;type&quot;</span><span class="p">:</span> <span class="s2">&quot;number&quot;</span>
+              <span class="p">},</span>
+              <span class="nt">&quot;east&quot;</span><span class="p">:</span> <span class="p">{</span>
+                <span class="nt">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;East (upper right corner, coordinate axis 1).&quot;</span><span class="p">,</span>
+                <span class="nt">&quot;type&quot;</span><span class="p">:</span> <span class="s2">&quot;number&quot;</span>
+              <span class="p">},</span>
+              <span class="nt">&quot;north&quot;</span><span class="p">:</span> <span class="p">{</span>
+                <span class="nt">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;North (upper right corner, coordinate axis 2).&quot;</span><span class="p">,</span>
                 <span class="nt">&quot;type&quot;</span><span class="p">:</span> <span class="s2">&quot;number&quot;</span>
               <span class="p">},</span>
               <span class="nt">&quot;base&quot;</span><span class="p">:</span> <span class="p">{</span>
-                <span class="nt">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;Lower left corner, coordinate axis 3 (base, optional).&quot;</span><span class="p">,</span>
+                <span class="nt">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;Base (optional, lower left corner, coordinate axis 3).&quot;</span><span class="p">,</span>
                 <span class="nt">&quot;type&quot;</span><span class="p">:</span> <span class="s2">&quot;number&quot;</span>
               <span class="p">},</span>
               <span class="nt">&quot;height&quot;</span><span class="p">:</span> <span class="p">{</span>
-                <span class="nt">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;Upper right corner, coordinate axis 3 (height, optional).&quot;</span><span class="p">,</span>
+                <span class="nt">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;Height (optional, upper right corner, coordinate axis 3).&quot;</span><span class="p">,</span>
                 <span class="nt">&quot;type&quot;</span><span class="p">:</span> <span class="s2">&quot;number&quot;</span>
               <span class="p">}</span>
             <span class="p">}</span>
@@ -1649,9 +1649,9 @@ Repeating calls are also not included as it would not make much sense to list th
         <span class="p">},</span>
         <span class="nt">&quot;extent&quot;</span><span class="p">:{</span>
           <span class="nt">&quot;west&quot;</span><span class="p">:</span><span class="mf">16.1</span><span class="p">,</span>
+          <span class="nt">&quot;south&quot;</span><span class="p">:</span><span class="mf">47.2</span><span class="p">,</span>
           <span class="nt">&quot;east&quot;</span><span class="p">:</span><span class="mf">16.6</span><span class="p">,</span>
-          <span class="nt">&quot;north&quot;</span><span class="p">:</span><span class="mf">48.6</span><span class="p">,</span>
-          <span class="nt">&quot;south&quot;</span><span class="p">:</span><span class="mf">47.2</span>
+          <span class="nt">&quot;north&quot;</span><span class="p">:</span><span class="mf">48.6</span>
         <span class="p">}</span>
       <span class="p">},</span>
       <span class="nt">&quot;extent&quot;</span><span class="p">:[</span>
@@ -1769,9 +1769,9 @@ Repeating calls are also not included as it would not make much sense to list th
         <span class="p">},</span>
         <span class="nt">&quot;extent&quot;</span><span class="p">:{</span>
           <span class="nt">&quot;west&quot;</span><span class="p">:</span><span class="mf">16.1</span><span class="p">,</span>
+          <span class="nt">&quot;south&quot;</span><span class="p">:</span><span class="mf">47.2</span><span class="p">,</span>
           <span class="nt">&quot;east&quot;</span><span class="p">:</span><span class="mf">16.6</span><span class="p">,</span>
-          <span class="nt">&quot;north&quot;</span><span class="p">:</span><span class="mf">48.6</span><span class="p">,</span>
-          <span class="nt">&quot;south&quot;</span><span class="p">:</span><span class="mf">47.2</span>
+          <span class="nt">&quot;north&quot;</span><span class="p">:</span><span class="mf">48.6</span>
         <span class="p">}</span>
       <span class="p">},</span>
       <span class="nt">&quot;extent&quot;</span><span class="p">:[</span>
@@ -1831,9 +1831,9 @@ Repeating calls are also not included as it would not make much sense to list th
         <span class="p">},</span>
         <span class="nt">&quot;extent&quot;</span><span class="p">:{</span>
           <span class="nt">&quot;west&quot;</span><span class="p">:</span><span class="mf">16.1</span><span class="p">,</span>
+          <span class="nt">&quot;south&quot;</span><span class="p">:</span><span class="mf">47.2</span><span class="p">,</span>
           <span class="nt">&quot;east&quot;</span><span class="p">:</span><span class="mf">16.6</span><span class="p">,</span>
-          <span class="nt">&quot;north&quot;</span><span class="p">:</span><span class="mf">48.6</span><span class="p">,</span>
-          <span class="nt">&quot;south&quot;</span><span class="p">:</span><span class="mf">47.2</span>
+          <span class="nt">&quot;north&quot;</span><span class="p">:</span><span class="mf">48.6</span>
         <span class="p">}</span>
       <span class="p">},</span>
       <span class="nt">&quot;extent&quot;</span><span class="p">:[</span>
