Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/examples-poc/index.html
+++ b/v/0.4.0/examples-poc/index.html
@@ -814,8 +814,8 @@ Repeating calls are also not included as it would not make much sense to list th
         <span class="nt">&quot;end&quot;</span><span class="p">:</span> <span class="s2">&quot;2017-02-01&quot;</span>
       <span class="p">}</span>
     <span class="p">},</span>
-    <span class="nt">&quot;NDVI1&quot;</span><span class="p">:</span> <span class="p">{</span>
-      <span class="nt">&quot;process_id&quot;</span><span class="p">:</span> <span class="s2">&quot;NDVI&quot;</span><span class="p">,</span>
+    <span class="nt">&quot;ndvi1&quot;</span><span class="p">:</span> <span class="p">{</span>
+      <span class="nt">&quot;process_id&quot;</span><span class="p">:</span> <span class="s2">&quot;ndvi&quot;</span><span class="p">,</span>
       <span class="nt">&quot;arguments&quot;</span><span class="p">:</span> <span class="p">{</span>
         <span class="nt">&quot;data&quot;</span><span class="p">:</span> <span class="p">{</span><span class="nt">&quot;from_node&quot;</span><span class="p">:</span> <span class="s2">&quot;filter1&quot;</span><span class="p">}</span>
       <span class="p">}</span>
@@ -823,7 +823,7 @@ Repeating calls are also not included as it would not make much sense to list th
     <span class="nt">&quot;reduce1&quot;</span><span class="p">:</span> <span class="p">{</span>
       <span class="nt">&quot;process_id&quot;</span><span class="p">:</span> <span class="s2">&quot;reduce&quot;</span><span class="p">,</span>
       <span class="nt">&quot;arguments&quot;</span><span class="p">:</span> <span class="p">{</span>
-        <span class="nt">&quot;data&quot;</span><span class="p">:</span> <span class="p">{</span><span class="nt">&quot;from_node&quot;</span><span class="p">:</span> <span class="s2">&quot;NDVI1&quot;</span><span class="p">},</span>
+        <span class="nt">&quot;data&quot;</span><span class="p">:</span> <span class="p">{</span><span class="nt">&quot;from_node&quot;</span><span class="p">:</span> <span class="s2">&quot;ndvi1&quot;</span><span class="p">},</span>
         <span class="nt">&quot;dimension&quot;</span><span class="p">:</span> <span class="s2">&quot;temporal&quot;</span><span class="p">,</span>
         <span class="nt">&quot;reducer&quot;</span><span class="p">:</span> <span class="p">{</span>
           <span class="nt">&quot;callback&quot;</span><span class="p">:</span> <span class="p">{</span>
