--- a/examples-poc/index.html
+++ b/examples-poc/index.html
@@ -1012,8 +1012,8 @@ Repeating calls are also not included as it would not make much sense to list th
         <span class="p">}</span>
       <span class="p">}</span>
     <span class="p">},</span>
-    <span class="nt">&quot;export1&quot;</span><span class="p">:</span> <span class="p">{</span>
-      <span class="nt">&quot;process_id&quot;</span><span class="p">:</span> <span class="s2">&quot;export&quot;</span><span class="p">,</span>
+    <span class="nt">&quot;savere1&quot;</span><span class="p">:</span> <span class="p">{</span>
+      <span class="nt">&quot;process_id&quot;</span><span class="p">:</span> <span class="s2">&quot;save_result&quot;</span><span class="p">,</span>
       <span class="nt">&quot;arguments&quot;</span><span class="p">:</span> <span class="p">{</span>
         <span class="nt">&quot;data&quot;</span><span class="p">:</span> <span class="p">{</span><span class="nt">&quot;from_node&quot;</span><span class="p">:</span> <span class="s2">&quot;aggreg1&quot;</span><span class="p">},</span>
         <span class="nt">&quot;format&quot;</span><span class="p">:</span> <span class="s2">&quot;JSON&quot;</span>
