--- a/draft/examples-poc/index.html
+++ b/draft/examples-poc/index.html
@@ -712,7 +712,7 @@ Repeating calls are also not included as it would not make much sense to list th
 <li>
 <p><strong>Upload python script</strong></p>
 <p><em>Request</em></p>
-<div class="codehilite"><pre><span></span><span class="nf">PUT</span> <span class="nn">/files/john_doe/s1_aggregate.py</span> <span class="kr">HTTP</span><span class="o">/</span><span class="m">1.1</span>
+<div class="codehilite"><pre><span></span><span class="nf">PUT</span> <span class="nn">/files/s1_aggregate.py</span> <span class="kr">HTTP</span><span class="o">/</span><span class="m">1.1</span>
 <span class="na">Content-Type</span><span class="o">:</span> <span class="l">application/octet-stream</span>
 
 &lt;File content&gt;
